chore(45): modify add card request contract
